5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1747_1536.log
== TEST (2019-05-16 10:35:10) 
-- CODE:
x = int(input("x: "))
k = int(input("k:"))

i = 2
 while (i<k):
		soma = (-1)**(x**2 + i)/i
		i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 5
    while (i<k):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:32) 
-- CODE:
x = int(input("x: "))
k = int(input("k:"))

i = 2
soma = 0
 while (i<k):
		soma = soma +((-1)**(x**2 + i)/i)
		i = i + 1
print(round(soma,10)
-- ERROR:
File "XXXX", line 6
    while (i<k):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:43) 
-- CODE:
x = int(input("x: "))
k = int(input("k:"))

i = 2
soma = 0
 while (i<=k):
		soma = soma +((-1)**(x**2 + i)/i)
		i = i + 1
print(round(soma,10)
-- ERROR:
File "XXXX", line 6
    while (i<=k):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:43:31) 
-- CODE:
x = int(input("x: "))
k = int(input("k:"))

i = 2
soma = 0
 while ():
		soma = soma +((-1)**(x**2 + i)/i)
		i = i + 1
print(round(soma,10)
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
